[tool.poetry]
name = "library-datastruct"
version = "0.1.0"
description = ""
authors = ["Eisiehame <knurov24@gmail.com>"]
readme = "README.md"
packages = [{include = "library_datastruct"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
